ui/apps/dropdown/src/index.css
:root {
  --font-sans: Roboto, sans-serif;
  --color-background-primary: light-dark(#ffffff, #1e1e1e);

  box-sizing: border-box;
  font-family: var(--font-sans);
  background-color: var(--color-background-primary);
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 24px;
}

